[package]
name = "os_kernel"
version = "0.1.0"
authors = ["Victor Penso <vic.penso@gmail.com>"]
edition = "2018"

[dependencies]
# implements a basic BIOS bootloader without any C dependencies
bootloader = "0.9.8"
# allows volatile memory access (never optimized away by a complier)
volatile = "0.2.6"

[profile.dev]
panic = "abort"    # disable stack unwinding

[profile.release]
panic = "abort"    # disable stack unwinding
