[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.4"
cortex-m = "0.7.3"
rtt-target = { version =  "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }

[dependencies.microbit-v2]
version = "0.12.0"
git = "https://github.com/nrf-rs/microbit/"